# cartridge-app

./: .gitignore  Cargo.toml  build.py  dl_page.html  icon.xcf  readme.md
src/: gui.rs  linux_tray.rs  main.rs  nixmain.rs  shims.rs  usb.rs  win_tray.rs  winmain.rs
