[package]
name = "cartridge_app"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2018"

[dependencies]
systray = "0.3.0"
#orbtk = "0.2.27"
orbtk = { git = "https://gitlab.redox-os.org/redox-os/orbtk.git" }

winapi = { version = "*", features = ["winuser","wincon","shellapi"] }

[target."cfg(target_os = \"linux\")".dependencies]
mktemp-rs = "0.2.0"

